# ctypes-zarith

./: ctypes-zarith.opam  dune-project
lib/: ctypes_zarith.c.ml  ctypes_zarith.mli  dune
lib/config/: discover.ml
test/: dune  run_tests.ml
test/ppx/: dune
test/stubgen/: dune
