opam-version: "2.0"

maintainer: "andreashauptmann@t-online.de"
authors: [ "andreashauptmann@t-online.de" ]
license: "LGPL-2.1+ with OCaml linking exception"
dev-repo: "git+https://github.com/fdopen/ctypes-zarith.git"
homepage: "https://github.com/fdopen/ctypes-zarith"
bug-reports: "https://github.com/fdopen/ctypes-zarith/issues"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "dune" {>= "1.2"}
  "zarith"
  "ctypes"
  "ppx_cstubs"
  "conf-pkg-config" {build}
  "ctypes-foreign" {with-test}
  "alcotest" {with-test}
]

synopsis: """
Demo how to mix ctypes and "custom" OCaml types
"""
