(rule
 (targets generated_stubs.c)
 (deps (:discover stub-gen/driver.exe))
 (action
  (with-stdout-to generated_stubs.c (run %{discover} -c))))

(rule
 (targets generated_bindings.ml)
 (deps (:discover stub-gen/driver.exe))
 (action
  (with-stdout-to generated_bindings.ml (run %{discover} -ml))))

(library
 (name test_stubgen)
 (c_names generated_stubs)
 (private_modules generated_bindings)
 (libraries ctypes ctypes-zarith ctypes_zarith_test_stubs))
